<resources>
    <string name="app_name">SciCal</string>
    <string name="ans"></string>
    <string name="val"></string>
    <string name="ac">AC</string>
    <string name="c">C</string>
    <string name="Openbracket">(</string>
    <string name="closebracket">)</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">Log</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="_1_x">1/x</string>
    <string name="xfaxt">x!</string>
    <string name="sqroot">√</string>
    <string name="divide">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="pi">π</string>
    <string name="zero">0</string>
    <string name="fullstop">.</string>
    <string name="equal">=</string>
</resources>
