<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#000000"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="center_vertical|end"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/ans"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="#000"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center_vertical|end"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/val"
                android:textColor="#fff"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_pressed"
                    android:text="@string/ac"
                    android:textColor="#FFEB3B"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/c"
                    android:textColor="#FFEB3B"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/Openbracket"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/closebracket"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/sin"
                    android:textAllCaps="false"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/cos"
                    android:textAllCaps="false"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/tan"
                    android:textAllCaps="false"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/log"
                    android:textAllCaps="false"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/ln"
                    android:textAllCaps="false"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/xfaxt"
                    android:textAllCaps="false"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="x2"
                    android:textAllCaps="false"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/sqroot"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/_1_x"
                    android:textAllCaps="false"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/divide"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/seven"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/eight"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/nine"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button16"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/multiply"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button17"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/four"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button18"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/five"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button19"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/six"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button20"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/sub"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button21"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/one"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button22"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/two"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button23"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/three"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button24"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/add"
                    android:textColor="#FFFFEB3B"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button25"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/pi"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button26"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/zero"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button27"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/fullstop"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button28"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/equal_button"
                    android:text="@string/equal"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>